@@ -3,6 +3,9 @@
  */
 package org.irods.jargon.core.utils;
 
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.Reader;
 import java.util.Arrays;
 import java.util.List;
 
@@ -206,6 +209,29 @@ public class MiscIRODSUtils {
 		}
 
 		return sb.toString();
+	}
+
+	/**
+	 * Handy method to take the given input stream and make it a String
+	 * 
+	 * @param inputStream
+	 * @return
+	 * @throws Exception
+	 */
+	public static String convertStreamToString(final InputStream inputStream)
+			throws Exception {
+		final char[] buffer = new char[0x10000];
+		StringBuilder out = new StringBuilder();
+		Reader in = new InputStreamReader(inputStream, "UTF-8");
+		int read;
+		do {
+			read = in.read(buffer, 0, buffer.length);
+			if (read > 0) {
+				out.append(buffer, 0, read);
+			}
+		} while (read >= 0);
+		String result = out.toString();
+		return result;
 	}
 
 }
